--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
+    "mongoose": "^6.3.5",
     "next": "12.1.6",
+    "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
